--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "ui",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "element-plus": "^2.2.21",
-    "less": "^4.1.3",
-    "vue": "^3.2.41"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
-    "@vitejs/plugin-vue": "^3.2.0",
-    "eslint": "^8.27.0",
-    "eslint-plugin-vue": "^9.7.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.2.3",
-    "vue-tsc": "^1.0.9"
-  }
+    "name": "ui",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vue-tsc && vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "element-plus": "^2.2.22",
+        "less": "^4.1.3",
+        "sortablejs": "^1.15.0",
+        "vue": "^3.2.45"
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.43.0",
+        "@typescript-eslint/parser": "^5.43.0",
+        "@vitejs/plugin-vue": "^3.2.0",
+        "eslint": "^8.28.0",
+        "eslint-plugin-vue": "^9.7.0",
+        "typescript": "^4.9.3",
+        "vite": "^3.2.4",
+        "vue-tsc": "^1.0.9"
+    }
 }
