--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "element-plus": "^2.2.22",
+        "@types/sortablejs": "^1.15.0",
+        "element-plus": "^2.2.26",
         "less": "^4.1.3",
         "sortablejs": "^1.15.0",
         "vue": "^3.2.45"
     },
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^5.43.0",
-        "@typescript-eslint/parser": "^5.43.0",
+        "@typescript-eslint/eslint-plugin": "^5.46.1",
+        "@typescript-eslint/parser": "^5.46.1",
         "@vitejs/plugin-vue": "^3.2.0",
-        "eslint": "^8.28.0",
-        "eslint-plugin-vue": "^9.7.0",
-        "typescript": "^4.9.3",
-        "vite": "^3.2.4",
-        "vue-tsc": "^1.0.9"
+        "eslint": "^8.29.0",
+        "eslint-plugin-vue": "^9.8.0",
+        "typescript": "^4.9.4",
+        "vite": "^3.2.5",
+        "vue-tsc": "^1.0.13"
     }
 }
